# cstc-2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Errorcodes.md  Makefile  README.md  cmake_install.cmake
src/: main.cpp  module.cpp  module.hpp  snippets.cpp  snippets.h
src/debug/: debug.hpp
src/lexer/: errors.cpp  errors.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parser/: errors.cpp  errors.hpp  parser.cpp  parser.hpp  symboltable.cpp  symboltable.hpp
src/parser/ast/: ast.cpp  ast.hpp  base_math.cpp  base_math.hpp  flow.cpp  flow.hpp  func.cpp  func.hpp  import.cpp  import.hpp  literal.cpp  literal.hpp  namespace.cpp  namespace.hpp  struct.cpp  struct.hpp  type.cpp  type.hpp  var.cpp  var.hpp
test/: test.cst  test1.cst
